styles/main_style.css
/*  
    storing frequently used colors, for easy maintainability
*/
:root {
    --main-bg-color: #1e212d;
    --main-text-color: #c5c6c7;
}

* {
    font-family: Consolas;
}

body {
    background-color: var(--main-bg-color);
    color: var(--main-text-color);
}

input[type="range"] {
    width: 150px;
}

#visualizer {
    justify-content: center;
    display: flex;
    padding-bottom: 40px;
    flex-grow: 1;
    width: 100%;
    height: 305px;
}

.bar {
    background: #3299ae;
    width: 20px;
    margin-right: 1px;
    position: relative;
    border-radius: 2px;
}

.sorted {
    background: rgb(30, 175, 20);
    width: 20px;
    margin-right: 1px;
    position: relative;
    border-radius: 2px;
}

.sorting {
    background: #e1d014;
    width: 20px;
    margin-right: 1px;
    position: relative;
    border-radius: 2px;
}

#settings {
    justify-content: center;
    display: flex;
    width: 100%;
}

.delay-selector {
    padding: 5px;
    margin: 2px;
}

.algorithm-card {
    box-sizing: border-box;
    box-shadow: 0 2px 5px rgb(0 0 0 / 30%);
    border-radius: 4px;
    overflow: hidden;
    background: var(--main-bg-color);
    width: 262px;
    display: inline-block;
    vertical-align: top;
    margin: 0 36px 36px 0;
    justify-content: center;
    cursor: pointer;
}

.algorithm-card:hover {
    border-color: #9ecaed;
    box-shadow: 0 0 10px #9ecaed;
}

.card-title {
    font-size: small;
    display: flex;
    color: #3299ae;
    background-color: rgb(223, 223, 223);
    justify-content: center;
}

.cards-container {
    display: grid;
    gap: 50px 50px;
    margin: 20px;
    grid-template-columns: 262px 262px 262px;
    grid-template-rows: auto;
}

.container-wrapper {
    display: flex;
    justify-content: center;
}

#delay-selector {
    padding: 0px;
    margin: 4px;
    height: 30px;
}

div.algorithm-card>div.card-title>h2>a {
    text-decoration-line: none;
    color: #3299ae
}

div#return-link {
    display: flex;
    float: right;
}

a {
    color: #9ecaed;
    text-decoration: none;
}

a:hover {
    color: #3299ae
}

button {
    padding: 7px;
    border-style: solid;
    border-radius: 5px;
    cursor: pointer;
    background-color: var(--main-bg-color);
    color: var(--main-text-color);
    margin: 10px;
}

img.static {
    position: relative;
    top: 0;
    left: 0;
    background: white;
}

img.static:hover {
    opacity: 0;
}

img.active {
    position: absolute;
    top: 0px;
    left: 0px;
    opacity: 0;
}

img.active:hover {
    position: absolute;
    top: 0px;
    left: 0px;
    opacity: 1;
}

div.overlaying-img-wrapper {
    position: relative;
}

button:hover {
    padding: 7px;
    margin: 10px;
    outline: none;
    border-color: #9ecaed;
    box-shadow: 0 0 10px #9ecaed;
    border-radius: 5px;
    cursor: pointer;
    background-color: var(--main-bg-color);
    color: var(--main-text-color);
}

button:hover.delay-selector {
    padding: 5px;
    margin: 2px;
    outline: none;
    border-color: #9ecaed;
    box-shadow: 0 0 10px #9ecaed;
    border-radius: 5px;
    cursor: pointer;
    background-color: var(--main-bg-color);
    color: var(--main-text-color);
}

select {
    padding: 5px;
    margin: 10px;
    background-color: var(--main-bg-color);
    color: var(--main-text-color);
    border-radius: 5px;
}

select:hover {
    padding: 5px;
    margin: 10px;
    background-color: var(--main-bg-color);
    color: var(--main-text-color);
    border-radius: 5px;
    border-color: #9ecaed;
    box-shadow: 0 0 10px #9ecaed;
}

div.range-wrapper {
    display: flex;
    flex-direction: column;
    justify-content: center;
    text-align: center;
}

#start-btn-wrapper {
    justify-content: center;
    display: flex;
    width: 100%;
}

